# IntelligentAlgorithms

./: AutomatedSnowmaker.cpp  CMakeLists.txt  FuzzyControl.hpp  README.md
Introduction/: Examples.m  IntelligentAlgorithms.md
notes/Part1/: Drawing1.vsdx  FuzzyInferenceSystems.md
notes/Part2/: Part2.md
notes/Part3/: Part3.md
notes/Part4/: Part4.md
notes/Part5/: Part5.md
tests/: CMakeLists.txt  UnitTests.cpp
